Update to QuoteSpace: Add rewarded ads, scroll position saving, update bundle IDs, and app store content

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: daily_quotes
-description: Quote English Daily - Learn English with inspiring quotes every day.
+description: QuoteSpace - Get inspired with quotes in your language every day.
 
 publish_to: 'none'
 
