--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Quote English Daily</string>
+	<string>QuoteSpace</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -47,7 +47,7 @@
 	<true/>
 	<!-- Google AdMob App ID -->
 	<key>GADApplicationIdentifier</key>
-	<string>ca-app-pub-5837885590326347~8016904004</string>
+	<string>ca-app-pub-5837885590326347~3192224175</string>
 	<key>SKAdNetworkItems</key>
 	<array>
 		<dict>
