--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: English Quote 27000 - Learn English with 27000 inspiring quotes.
 
 publish_to: 'none'
 
-version: 1.0.4+14
+version: 1.0.5+15
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
@@ -35,6 +35,8 @@ flutter_launcher_icons:
   image_path: "assets/icon/app_icon.png"
   min_sdk_android: 21
   remove_alpha_ios: true
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/icon/app_icon.png"
 
 flutter:
   uses-material-design: true
